key css 위치 변경, active ttl 링크

--- a/src/assets/styles/page/_etpr-profile.scss
+++ b/src/assets/styles/page/_etpr-profile.scss
@@ -52,129 +52,6 @@
   }
 }
 
-// page
-.etpr-prifile-page {
-  background-color: #F9F9FB;
-
-  .page-container {
-    position: relative;
-    padding-top: 40px;
-  }
-
-  .wide-panel {
-    position: relative;
-    z-index: 5;
-  }
-
-  .flexable-container {
-    padding-top: 60px;
-  }
-
-  .section-ttl {
-    position: relative;
-    margin-top: 60px;
-    margin-bottom: 30px;
-    font-size: rem(25);
-    font-weight: 600;
-    color: #171820;
-
-    .badge {
-      @include absolute($t: 0, $r: 0);
-    }
-
-    .ttl-dec {
-      display: flex;
-      margin-top: 12px;
-
-      .txt {
-        margin-right: 5px;
-        font-size: rem(15);
-        font-weight: 400;
-        color: #5C5E70;
-        -webkit-text-stroke: 0.2px #5C5E70;
-      }
-    }
-
-    + .flexable-container {
-        padding-top: 0;
-      }
-  }
-
-  .panel-ttl {
-    position: relative;
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    font-size: rem(18);
-    font-weight: 500;
-    color: #5C5E70;
-
-    .hover-desc {
-      margin-left: 8px;
-    }
-
-    .badge {
-      @include absolute($t: 0, $r: 0);
-    }
-  }
-
-  .badge {
-    display: inline-block;
-    padding: 6px 8px;
-    border: 1px solid #5C5E70;
-    background-color: #8E909F;
-    font-size: rem(12);
-    font-weight: 400;
-    color: white;
-
-    &.yellow {
-      border-color: #FF9900;
-      background-color: #FFB300;
-    }
-
-    &.green {
-      border-color: #009A75;
-      background-color: #00BF92;
-    }
-  }
-
-  .top-cont-wrap {
-    display: flex;
-    margin-bottom: 20px;
-    padding: 20px 40px;
-    border: 1px solid #5C5E70;
-    background-color: white;
-  }
-
-  .empty-wrap {
-    margin-top: 50px;
-  }
-
-  .invest-list {
-    padding-right: rem(50);
-
-    .ttl {
-      margin-bottom: 8px;
-      font-size: rem(15);
-      font-weight: 400;
-      color: #8E909F;
-      -webkit-text-stroke: 0.2px #8e909f;
-    }
-
-    .dec {
-      font-size: rem(18);
-      font-weight: 500;
-      color: #171820;
-      -webkit-text-stroke: 0.2px #171820;
-    }
-  }
-
-  .member-list {
-    background-color: white;
-    border: 0;
-  }
-}
-
 .right-fixed {
   @include fixed($t: 110px, $l: 50%);
   
@@ -357,6 +234,11 @@
     font-size: rem(18);
     font-weight: 400;
     color: #171820;
+    cursor:pointer;
+
+    &:hover {
+      font-weight: 500;
+    }
   }
 
   .active-ttl.active {
@@ -505,7 +387,7 @@
 
 .review-container {
   padding-bottom: 100px;
-  
+
   .review-card {
     margin-bottom: 10px;
   }
@@ -553,5 +435,185 @@
     color: #B8BAC7;
     text-align: right;
     -webkit-text-stroke: 0.2px #B8BAC7;
+  }
+}
+
+// page
+// info page
+.etpr-prifile-page {
+  background-color: #F9F9FB;
+
+  .page-container {
+    position: relative;
+    padding-top: 40px;
+  }
+
+  .wide-panel {
+    position: relative;
+    z-index: 5;
+  }
+
+  .flexable-container {
+    padding-top: 60px;
+  }
+
+  .section-ttl {
+    position: relative;
+    margin-top: 60px;
+    margin-bottom: 30px;
+    font-size: rem(25);
+    font-weight: 600;
+    color: #171820;
+
+    .badge {
+      @include absolute($t: 0, $r: 0);
+    }
+
+    .ttl-dec {
+      display: flex;
+      margin-top: 12px;
+
+      .txt {
+        margin-right: 5px;
+        font-size: rem(15);
+        font-weight: 400;
+        color: #5C5E70;
+        -webkit-text-stroke: 0.2px #5C5E70;
+      }
+    }
+
+    + .flexable-container {
+        padding-top: 0;
+      }
+  }
+
+  .panel-ttl {
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    font-size: rem(18);
+    font-weight: 500;
+    color: #5C5E70;
+
+    .hover-desc {
+      margin-left: 8px;
+    }
+
+    .badge {
+      @include absolute($t: 0, $r: 0);
+    }
+  }
+
+  .badge {
+    display: inline-block;
+    padding: 6px 8px;
+    border: 1px solid #5C5E70;
+    background-color: #8E909F;
+    font-size: rem(12);
+    font-weight: 400;
+    color: white;
+
+    &.yellow {
+      border-color: #FF9900;
+      background-color: #FFB300;
+    }
+
+    &.green {
+      border-color: #009A75;
+      background-color: #00BF92;
+    }
+  }
+
+  .top-cont-wrap {
+    display: flex;
+    margin-bottom: 20px;
+    padding: 20px 40px;
+    border: 1px solid #5C5E70;
+    background-color: white;
+  }
+
+  .empty-wrap {
+    margin-top: 50px;
+  }
+
+  .invest-list {
+    padding-right: rem(50);
+
+    .ttl {
+      margin-bottom: 8px;
+      font-size: rem(15);
+      font-weight: 400;
+      color: #8E909F;
+      -webkit-text-stroke: 0.2px #8e909f;
+    }
+
+    .dec {
+      font-size: rem(18);
+      font-weight: 500;
+      color: #171820;
+      -webkit-text-stroke: 0.2px #171820;
+    }
+  }
+
+  .member-list {
+    background-color: white;
+    border: 0;
+  }
+}
+
+// report page
+.etpr-profile-report-page {
+  .etpr-tab-container {
+    padding-bottom: 100px;
+  }
+
+  .information-txt {
+    @include flex-center;
+
+    margin-bottom: 40px;
+  }
+
+  .empty-wrap {
+    padding: 40px 0 100px;
+  }
+}
+
+// report detail page
+.etpr-profile-report-page {
+  .etpr-tab-container {
+    padding-bottom: 100px;
+  }
+
+  .information-txt {
+    @include flex-center;
+
+    margin-bottom: 40px;
+  }
+
+  .empty-wrap {
+    padding: 40px 0 100px;
+  }
+}
+
+// board page
+.etpr-profile-board-page {
+  .etpr-tab-container {
+    padding-bottom: 100px;
+  }
+
+  .board-list-grp {
+    background-color: white;
+
+    .empty-wrap {
+      padding: 40px 0 100px;
+    }
+  }
+}
+
+// board detail page
+.etpr-profile-board-page {
+  .etpr-tab-container {
+    padding-bottom: 100px;
   }
 }
