--- a/src/assets/styles/page/_etpr-profile.scss
+++ b/src/assets/styles/page/_etpr-profile.scss
@@ -7,6 +7,10 @@
   margin-top: 30px;
 }
 
+.pdt-60 {
+  margin-top: 60px;
+}
+
 .white-panel {
   padding: 20px 40px;
   background-color: white;
@@ -451,10 +455,6 @@
   .wide-panel {
     position: relative;
     z-index: 5;
-  }
-
-  .flexable-container {
-    padding-top: 60px;
   }
 
   .section-ttl {
