jhj 마이페이지 소속기업 없을 때 경우

--- a/src/assets/styles/layout/_mypage.scss
+++ b/src/assets/styles/layout/_mypage.scss
@@ -96,6 +96,16 @@
   }
 }
 
+.mypage-snav-ttl-sub{
+  width: 100%;
+  text-align: left;
+  display: inline-block;
+  color: #8E909F;
+  font-size: 14px;
+  line-height: 1.4;
+  margin-bottom: 5px;
+}
+
 .mypage-snav-grp{ // 사이드네비 네비게이션 그룹
   padding: 22px 0;
 }
