--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -39,4 +39,5 @@
 @import "page/mypage"; // cgs 마이페이지
 @import "page/mypage-enterprise-info"; // 기업 정보
 @import "page/mypage-factcheck"; // 팩트체크
+@import "page/mypage-point"; // 포인트
 @import "page/mypage-note"; // 쪽지함
