--- a/src/assets/styles/page/_auth.scss
+++ b/src/assets/styles/page/_auth.scss
@@ -217,6 +217,10 @@
   margin: 0 auto;
 }
 
+.narrow-panel.w-380{
+  width: 380px;
+}
+
 .auth-panel {
   margin: 0 auto 150px;
   padding: 40px 20px 30px;
