--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -532,6 +532,16 @@
     line-height: 1.3;
   }
 
+  .state-period{
+    font-size: 20px;
+    line-height: 1.4;
+    margin: 10px 0 15px;
+
+    b{
+      font-weight: 500;
+    }
+  }
+
   .state-desc{
     font-size: 15px;
     margin-top: 5px;
