--- a/src/assets/styles/page/_mypage-point.scss
+++ b/src/assets/styles/page/_mypage-point.scss
@@ -162,4 +162,26 @@
   }
 }
 
+/* 마이페이지 > 포인트 > 멤버십 구매완료 페이지 */
+.mypage-membership-complete-page{
+  .state-guide-box{
+    margin-bottom: 40px;
+
+    .state-desc{
+      color: #8E909F;
+    }
+  }
+
+  .charge-form-grp{
+    justify-content: center;
+    margin-top: 20px;
+
+    .lbel{
+      padding-top: 2px;
+      margin-right: 27px;
+    }
+  }
+}
+
+
 /* ========== END 마이페이지 > 포인트 ========== */
