jhj 멤버십 구매 페이지 완료

--- a/src/assets/styles/component/_form.scss
+++ b/src/assets/styles/component/_form.scss
@@ -99,6 +99,7 @@ textarea.inp{ // 구성요소: 텍스트에어리어 기본 스타일
     width: 100%;
     font-weight: 500;
     color: #171820;
+    text-align: left;
   }
 
   .lbel-lg{
