--- a/src/assets/styles/page/_mypage-point.scss
+++ b/src/assets/styles/page/_mypage-point.scss
@@ -26,10 +26,16 @@
 
   .ttl-sub{
     @include flex{
-      @include flex-op(center, flex-start);
+      @include flex-op(flex-start, flex-start);
     }
+    flex-direction: column;
 
     gap: 6px;
+
+    .lbel{
+      font-size: 12px;
+      color: #5C5E70;
+    }
 
     .amount{
       @include font-op($w: 600){
@@ -159,6 +165,141 @@
       padding-top: 2px;
       margin-right: 27px;
     }
+  }
+}
+
+/* 마이페이지 > 포인트 > 멤버십 구매 페이지 */
+.mypage-membership-main-page{
+  .keyword-card{
+    margin-bottom: 10px;
+  }
+}
+
+.nothing-membership{
+  font-size: 18px;
+  color: #B8BAC7;
+  font-weight: 500;
+  display: inline-block;
+  width: 100%;
+  margin-top: 5px;
+  margin-bottom: 25px;
+}
+
+.membership-list-grp{
+  @include flex{
+    @include flex-op(stretch, flex-start);
+  }
+
+  gap: 10px;
+}
+
+.membership-list{
+  @include flex-col;
+  @include flex-op(stretch, space-between);
+
+  background-color: #F9F9FB;
+  overflow: hidden;
+  position: relative;
+  padding: 40px 20px;
+  color: #171820;
+  flex: 1 1 33.33%;
+  min-width: 200px;
+  min-height: 384px;
+
+  @include make-before{
+    width: 69px;
+    height: 69px;
+    border: 1px solid #dddee6;
+    background-color: white;
+    transform: rotate(45deg);
+
+    position: absolute;
+    top: -40px;
+    left: -40px;
+    z-index: 1;
+    pointer-events: none;
+  }
+
+  @include make-after{
+    width: calc(100% - 2px);
+    height: calc(100% - 2px);
+    border: 1px solid #DDDEE6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+  }
+  
+  .buy-btn {
+    margin-top: 5px;
+  }
+}
+
+.membership-list:hover,
+.membership-list.is-active{
+  background-color: white;
+  
+  &:before,
+  &:after{
+    border-color: #171820;
+  }
+
+  .btn-solid-dark{
+    background-color: #3060FF;
+
+    &:disabled{
+      opacity: 0.7;
+    }
+
+    &:hover{
+      background-color: darken(#3060FF, 3%);
+    }
+    
+    &:active{
+      background-color: darken(#3060FF, 8%);
+    }
+  }
+}
+
+.mbs-hgrp{
+  margin-bottom: 15px;
+  .sub-name{
+    font-size: 12px;
+    color: #5C5E70;
+    display: inline-block;
+    margin-bottom: 6px;
+  }
+
+  .name{
+    font-size: 18px;
+    font-weight: 500;
+  }
+}
+
+.mbs-benefit-list-grp{
+  border-top: 1px dashed #B8BAC7;
+  border-bottom: 1px dashed #B8BAC7;
+  padding: 5px 0;
+  margin: 16px 0;
+}
+
+.mbs-benefit-list{
+  font-size: 13px;
+  line-height: 1.4;
+  color: #5C5E70;
+  margin: 15px 0;
+}
+
+.mbs-point-grp{
+  @include flex{
+    @include flex-op(center, space-between);
+  }
+
+  margin-bottom: 10px;
+
+  .lbel{
+    color: #5C5E70;
+    font-size: 12px;
   }
 }
 
