cgs - 투자자) 기업정보-기본정보

--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -32,6 +32,10 @@
     line-height: 1.5;
   }
 
+  .empty-txt {
+    line-height: 1.5;
+  }
+
   a.txt{
     &:hover{
       text-decoration: underline
