--- a/src/assets/styles/component/_avatar-thumbnail.scss
+++ b/src/assets/styles/component/_avatar-thumbnail.scss
@@ -90,6 +90,10 @@
 
     -webkit-text-stroke: 0.5px #8e909f;
     margin-bottom: 2px;
+
+    &.name-user-type-lg {
+      font-size: 15px;
+    }
   }
 
   .name-subtxt-grp{
