--- a/src/assets/styles/component/_button.scss
+++ b/src/assets/styles/component/_button.scss
@@ -535,9 +535,14 @@
 }
 
 .badge-p{
+  @include bg-op($s: contain);
   @include circle(18px);
 
   background-image: url("data:image/svg+xml,%3Csvg id='icon-point' xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18'%3E%3Ccircle id='타원_374' data-name='타원 374' cx='9' cy='9' r='9' fill='%23171820'/%3E%3Cpath id='패스_6880' data-name='패스 6880' d='M683.487,379.706h-3.658v9.5h2.108v-3.381h1.55c2.253,0,3.6-1.143,3.6-3.059S685.74,379.706,683.487,379.706Zm1.49,3.06c0,.764-.543,1.2-1.49,1.2h-1.55v-2.4h1.551a1.607,1.607,0,0,1,1.179.381A1.124,1.124,0,0,1,684.977,382.766Z' transform='translate(-673.578 -375.457)' fill='%2353ff81'/%3E%3C/svg%3E%0A");
+}
+
+.badge-p-sm{
+  @include circle(14px);
 }
 
 .badge-qus{
@@ -569,6 +574,7 @@
 
   display: inline-flex;
   gap: 4px;
+  padding: 0 5px;
 }
 
 .toggle-onoff{ // 구성요소: 토글 스타일
