--- a/src/assets/styles/component/_form.scss
+++ b/src/assets/styles/component/_form.scss
@@ -217,6 +217,7 @@ textarea.inp{ // 구성요소: 텍스트에어리어 기본 스타일
     padding: 12.5px 0;
     padding-right: 20px;
     border: 0;
+    background-color: transparent;
   }
 
   .slct-opts-grp{
