--- a/src/assets/styles/page/_mypage-note.scss
+++ b/src/assets/styles/page/_mypage-note.scss
@@ -1,12 +1,12 @@
 /* ========== 마이페이지 > 쪽지함 ========== */
 
 .mypage-note-list-page{ // 구성요소 - 쪽지함 페이지
-  .inp-sch-grp{
+  .page-inp-grp{
     margin-bottom: 15px;
     max-width: 360px;
   }
 
-  .tab{
+  .page-tab{
     margin-bottom: 30px;
   }
 }
