--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -145,4 +145,10 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg id='icon-info' transform='translate(-433 -560)'%3E%3Cg id='타원_341' data-name='타원 341' transform='translate(433 560)' fill='%23b8bac7' stroke='%238e909f' stroke-width='1'%3E%3Ccircle cx='12' cy='12' r='12' stroke='none'/%3E%3Ccircle cx='12' cy='12' r='11.5' fill='none'/%3E%3C/g%3E%3Cpath id='About' d='M1.44-10.76H4.56V0H1.44ZM3-12.26a1.979,1.979,0,0,1-1.4-.5A1.622,1.622,0,0,1,1.06-14a1.622,1.622,0,0,1,.54-1.24,1.979,1.979,0,0,1,1.4-.5,2.029,2.029,0,0,1,1.4.48,1.539,1.539,0,0,1,.54,1.2,1.7,1.7,0,0,1-.54,1.29A1.956,1.956,0,0,1,3-12.26Z' transform='translate(441.94 579.74)' fill='%23fff'/%3E%3C/g%3E%3C/svg%3E%0A");
 }
 
+.icon-del {
+  width: 14px;
+  height: 14px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14'%3E%3Cg id='icon-del-input' transform='translate(-888 -1059)'%3E%3Crect id='사각형_2114' data-name='사각형 2114' width='14' height='14' transform='translate(888 1059)' fill='rgba(255,255,255,0)'/%3E%3Cg id='그룹_5805' data-name='그룹 5805' transform='translate(-14.5 0.5)'%3E%3Cline id='선_889' data-name='선 889' x2='10' y2='10' transform='translate(904.5 1060.5)' fill='none' stroke='%238e909f' stroke-width='2'/%3E%3Cline id='선_890' data-name='선 890' x1='10' y2='10' transform='translate(904.5 1060.5)' fill='none' stroke='%238e909f' stroke-width='2'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
 /* ========== END icon 관련 스타일 ========== */
