key 투자자에서만 보이는 레이아웃

--- a/src/assets/styles/component/_form.scss
+++ b/src/assets/styles/component/_form.scss
@@ -40,6 +40,20 @@
   @include inp-default;
 }
 
+.inp-textarea {
+  height: 200px;
+  
+  &::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #00EB79;
+  }
+}
+
 %inp-default{
   @include inp-default;
 }
