--- a/src/assets/styles/base/_helper.scss
+++ b/src/assets/styles/base/_helper.scss
@@ -1,4 +1,20 @@
 /* ========== helper ========== */
+// 여백들
+.mgt-20 {
+  margin-top: 20px;
+}
+
+.mgt-30 {
+  margin-top: 30px;
+}
+
+.pdt-60 {
+  margin-top: 60px;
+}
+
+.pd-0 {
+  padding: 0 !important;
+}
 
 // 노출되지 않을 영역
 .is-none {
