--- a/src/assets/styles/page/_etpr-profile.scss
+++ b/src/assets/styles/page/_etpr-profile.scss
@@ -406,6 +406,39 @@
   }
 }
 
+//blur contents
+.cover-blur-container {
+  @include absolute($t: 50%, $l: 50%);
+
+  display: none;
+  z-index: 3;
+  width: 80%;
+  max-width: 305px;
+  padding: 32px 20px 35px;
+  border: 2px solid #00EB79;
+  background-color: white;
+  transform: translate(-50%, -50%);
+  text-align: center;
+
+  .text {
+    margin-top: 8px;
+    font-size: rem(18);
+    font-weight: 500;
+    color: #5C5E70;
+    line-height: 1.66;
+  }
+}
+
+.cover-blur {
+  .cover-blur-container {
+    display: block;
+  }
+
+  .common-info-container {
+    filter: blur(10px);
+  }
+}
+
 // page
 // info page
 .etpr-prifile-page {
